# FIFO-buffer

./: Cargo.toml  README.md
src/: main.rs
