[package]
name = "fifo-buffer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4.0"
rustbox = "0.11.0"
term_size = "0.3.2"
unicode-segmentation = "1.6.0"
getopts = "0.2.21"
crossterm = { version = "0.21", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.4", default-features = false, features = ["std"] }
tui = { version = "0.16.0", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"